--- a/config.conf.CONF
+++ b/config.conf.CONF
@@ -7,7 +7,7 @@ addons_path = C:\odoo-18.0\odoo-18.0\addons, C:\odoo-18.0\odoo-18.0\odoo, C:\odo
 admin_passwd = admin123
 
 ; CSV
-csv_internal_sep = ,
+#csv_internal_sep = ,
 
 ; Folder data (session, filestore, attachments, dll)
 data_dir = C:\odoo-18.0\odoo-18.0
