--- a/odoo.conf.CONF
+++ b/odoo.conf.CONF
@@ -32,6 +32,7 @@ http_interface =
 ; GeoIP — pakai opsi baru
 geoip_city_db = C:\odoo18\geoip\GeoLite2-City.mmdb
 
+wudyasdhjsdh
 ; Logging
 logfile = D:\NSP2\odoo.log
 log_level = debug
